SF Primes/src/objects/TRV_B4B_Push__c.object
<CustomObject>
    <description>Related to (Travers/PSG) B4B Coaching Visits and rolls up to Consulting Projects.
Track when a customer delivery deadline slips and record the reason why.
Endiem January 2016</description>
    <fields>
        <fullName>TRV_B4B_Coaching__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Indicate the related B4B record that was &quot;pushed&quot;</inlineHelpText>
        <label>B4B Coaching</label>
        <referenceTo>Traver_Coaching__c</referenceTo>
        <relationshipName>B4B_Coaching_B4B_Pushes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRV_Date_Pushed__c</fullName>
        <label>Date Pushed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TRV_Pushed_By__c</fullName>
        <label>Pushed By</label>
        <picklist>
            <picklistValues>
                <fullName>By Client</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>By CDK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TRV_Pushed_Reason__c</fullName>
        <label>Pushed Reason</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <label>B4B Push</label>
    <nameField>
        <displayFormat>Push-{0000}</displayFormat>
        <label>B4B Push Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B4B Pushes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>